# QQBotText

./: README.md
myQQBot/: README.md  bot.py  config.yml  device.json  pyproject.toml  session.token
myQQBot/config/: 开关.json  违禁词监控等级.json
myQQBot/config/template/: 780974990.html
myQQBot/data/: image.db  lolicon.db  setu_config.json  video.db
myQQBot/data/leveldb-v2/: 000440.ldb  000441.ldb  000443.ldb  000444.ldb  000448.ldb  LOG  MANIFEST-000446
myQQBot/data/setu2/: usercd.json
myQQBot/data/setu4/: setu_perm_cfg.json
myQQBot/data/voices/: 0FEF7B66740BE3215AFD196495E1FDA3.amr  CE45CC6989CD1C8C0CFAFAD3175E02BE.amr
myQQBot/src/plugins/timework/: __init__.py  config.py  time.py
myQQBot/src/plugins/zdhf/: addSbToBan.py  chuo.py  config2.py  huifu.py  image.py  jitang.py  live.py  tiangou.py  utils.py  yiyan.py
