[tool.poetry]
name = "myQQBot"
version = "0.1.0"
description = "myQQBot"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0-beta.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[tool.nonebot]
plugins = ["nonebot_plugin_songpicker2", "nonebot_plugin_setu", "nonebot_plugin_who_at_me", "nonebot_plugin_color", "nonebot_plugin_heisi", "nonebot_plugin_picsearcher", "nonebot_plugin_reboot", "nonebot_plugin_setu2", "nonebot_plugin_apscheduler", "nonebot_plugin_admin", "nonebot_plugin_withdraw", "nonebot_plugin_hitokoto", "nonebot_plugin_answersbook", "nonebot_plugin_setu4", "nonebot_plugin_moyu", "nonebot_plugin_cchess", "nonebot_plugin_boardgame", "nonebot_plugin_namelist"]
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
